--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<nav class="navegador">
 		
 	<div class="contenedornav">
-		<input type="text" name="search" placeholder="Search...">
 
 		<div class="logomenu">
 			<img src="imagenes/logo.png">
@@ -23,6 +22,10 @@
 			</ul>
 		</div>
 		<h2>Items</h2>
+
+		<section>
+			<div>Hola</div>
+		</section>
 
 	</div>
 
